--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -68,7 +68,7 @@
                     </div>
 
             <!--ABout me section-->
-            <div class="column-2">
+            <div class="column-2" <meta name="viewport" content="width=device-width, initial-scale=1">
                 <h1>Alan Titchmarsh</h1>
                 <p>Alan Titchmarsh left school with one O'Level in Art and became an apprentice gardener in Ilkley's Parks Department from 1964 to 1968, and a few years later was supervisor of staff training at the Royal Botanic Gardens.
 
@@ -81,12 +81,13 @@
                 Credit:  https://www.biogs.com/famous/titchmarsh.html            
             </p>
             </div>
+ 
+            <!--
+                <div name="viewport" content="width=device-width, initial-scale=3.0" class="column-2 large-profile"></div>
 
-            <div class="column-2 large-profile"></div>
+            -->
 
 
-
-    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
