--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,11 +34,11 @@
 
 .column-2 {
   float: left;
-  width: 45%;
   padding: 40px;
+  max-width: 50%; 
+  max-height: fit-content;
   padding-left:70px;
   padding-right: 70px;
-  height: 475px;
   margin:30px;
   margin-right:30px;
   margin-bottom: 70px;
@@ -47,12 +47,17 @@
 }
 
 .large-profile {
-  background: url('../images/gardner.jpg');
-  background-size: cover;
-  background-position: center;
+background: url('../images/gardner.jpg');
+float:right;
+max-width:100%;
+max-height:auto;
 }
 
 .column{
     background-position: 300px 100px;
+    
+}
 
+@-ms-viewport{
+  width: device-width;
 }
