fix mobile on contact/ style

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -68,8 +68,12 @@
                     </div>
 
             <!--ABout me section-->
-            <div class="column-2" <meta name="viewport" content="width=device-width, initial-scale=1">
+            <center><div class="column-2" <meta name="viewport" content="width=device-widscale=1">
                 <h1>Alan Titchmarsh</h1>
+
+               <img style=" max-width:70%; max-height: fit-content;"  src="../images/gardner.jpg" alt="Picture of Alan">
+
+
                 <p>Alan Titchmarsh left school with one O'Level in Art and became an apprentice gardener in Ilkley's Parks Department from 1964 to 1968, and a few years later was supervisor of staff training at the Royal Botanic Gardens.
 
                 Titchmarsh left in 1974 and became an assistant editor of gardening books at Hamlyn, before going on to be Deputy Editor of Amateur Gardening magazine.
@@ -78,9 +82,13 @@
 
                 Alan Titchmarsh has written more than 40 gardening books, including the best-seller How to be a Gardener. He has also written novels such as Mr MacGregor, The Last Lighthouse Keeper, Only Dad, and Rosie.
 
-                Credit:  https://www.biogs.com/famous/titchmarsh.html            
+
+               <p>     
+                   Credit: biogs.com  
+               </p>   
+
             </p>
-            </div>
+            </div> </center>
  
             <!--
                 <div name="viewport" content="width=device-width, initial-scale=3.0" class="column-2 large-profile"></div>
