--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,24 +33,15 @@
 
 
 .column-2 {
-  float: left;
+  float: center;
   padding: 40px;
-  max-width: 50%; 
+  max-width: 70%; 
   max-height: fit-content;
+  margin-bottom: 70px;
   padding-left:70px;
   padding-right: 70px;
-  margin:30px;
-  margin-right:30px;
-  margin-bottom: 70px;
   background-color: #FFF8C2;
   line-height:2;
-}
-
-.large-profile {
-background: url('../images/gardner.jpg');
-float:right;
-max-width:100%;
-max-height:auto;
 }
 
 .column{
