working mobile form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1470,7 +1470,7 @@
                     <label for="plotnumber">Plot Number</label>
                     <select class="custom-select" id="plotnumber" name="plotnumber">
                      <% for( var i=0; i < emptyPlots.length; i++){ %>
-                    <option value="<%i%>" ><%= emptyPlots[i] %></option>
+                    <option value="<%= emptyPlots[i] %>" ><%= emptyPlots[i] %></option>
                     <% } %>
                     </select>
                 </div>
