updated nav to collapse

--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -34,8 +34,8 @@
                         </ul>
                     </div>
                 </nav>
-
-                <div class="jumbotron">
+                
+                    <div class="jumbotron">
                     <h1 class="display-4">The Community Garden</h1>
                     <p class="lead">Volunteer</p>
                     <button type="button" id="modalBtn" class="btn btn-light btn-lg float-md-right" >VolunteerForm</button>
@@ -45,7 +45,7 @@
                     <iframe id="popupFrame" src=""></iframe>
                   </div>
                   
-
+                <div class="volunteerWrap"></div>
                 <div class="container">
                     <div class="left">
                         <img src="images/CleanUp.png" width="300px" height="300px"></img>
@@ -61,6 +61,9 @@
                             </p>
                          </div>
                     </div>
+                </div>
+
+                
                 </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
