--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -44,10 +44,11 @@
                 <div id="popup">
                     <iframe id="popupFrame" src=""></iframe>
                   </div>
-                  
-                <div class="volunteerWrap"></div>
+
+            
                 <div class="container">
-                    <div class="left">
+                    <div class="boxV">
+                        <div class="left">
                         <img src="images/CleanUp.png" width="300px" height="300px"></img>
                         <img src="images/Maintinance.png" width="300px" height="300px"></img>
                         <img src="images/Water.png" width="300px" height="300px"></img>
@@ -61,10 +62,11 @@
                             </p>
                          </div>
                     </div>
+                    </div>
                 </div>
 
                 
-                </div>
+            </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
