--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,10 +36,10 @@
    }
 
    .mobilePic{
+        width: 100%;
         display: none;
-        margin-left: auto;
-        margin-right: auto;
-        width:50%;
+        margin-left:auto;
+        margin-right:auto;
    }
 
    .mobileBtn{
@@ -68,11 +68,11 @@
 }
 
 /* Make the calendar shrink for mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 375px) {
     div.calendar{
         position: relative; 
-        width: 550px;
-        height: 550px;
+        width: 360px;
+        height: 440px;
         padding-bottom: 75%; 
         overflow: hidden;
     }
@@ -87,7 +87,7 @@
 }
 
 /* Disable icons when screen shrinks */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 375px) {
   div.left {
     display: none;
   }
@@ -97,8 +97,26 @@
 @media only screen and (max-width: 1024px) {
     div.calendar{
         position: relative; 
-        width: 550px;
-        height: 550px;
+        width: 360px;
+        height: 440px;
+        padding-bottom: 75%; 
+        overflow: hidden;
+    }
+
+    div.calendar iframe{
+        position: absolute; 
+        top:0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    div.calendar{
+        position: relative; 
+        width: 360px;
+        height: 440px;
         padding-bottom: 75%; 
         overflow: hidden;
     }
@@ -134,10 +152,10 @@
     display:none;
   }
   .mobilePic{
+    width: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: 75%;
-    width: 40%;
+    margin-left:auto;
+    margin-right:auto;
   }
 
   .mobileBtn{
