--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,9 +51,10 @@
                     </div>
                 </div>
                     <div class="mobilePic">
-                        <img src="images/FinalImageMobile.png" width="400px" height="500px"></img>
+                        <img src="images/FinalImageMobile.png" width="585px" height="630px"></img>
                     </div>
-                    <h6 id="pageDescription">Hello! This is an interactive map of the communitity. When you hover over a plot Plots that are green are available. Plots in brown are already rented.</h6>
+                    <h6 id="pageDescription">Hello! This is an interactive map of the communitity garden. When you hover over a plot it turns dark green. 
+                        Plots that are green are available. Plots in brown are already rented.</h6>
                     <div class="box">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg class="hidden-svg"
