Updated volunteer mobile styles

--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -41,10 +41,11 @@
                     <button type="button" id="modalBtn" class="btn btn-light btn-lg float-md-right" >VolunteerForm</button>
                 </div>
 
-                <div id="popup">
+                <div class="form">
+                    <div id="popup" >
                     <iframe id="popupFrame" src=""></iframe>
                   </div>
-
+                </div>
             
                 <div class="container">
                     <div class="boxV">
