--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,20 +113,20 @@
 }
 
 @media only screen and (max-width: 1024px) {
-    div.calendar{
-        position: relative; 
+    div.form iframe{
         width: 360px;
         height: 440px;
-        padding-bottom: 75%; 
         overflow: hidden;
     }
+}
 
-    div.calendar iframe{
-        position: absolute; 
-        top:0; 
-        left: 0; 
-        width: 100%; 
-        height: 100%;
+@media only screen and (max-width: 1024px) {
+    div.jumbotron{
+        height: 187px;
+    }
+    h1.display-4{
+        font-weight: 10px;
+        font-size: 20px;
     }
 }
 
