fix order of crops

--- a/views/information.ejs
+++ b/views/information.ejs
@@ -48,51 +48,51 @@
         <form method='POST' action="/information" style="font-size:20px;">
                  <select style = "font-weight: bold;" id="selectedOption" name="selectedOption">
                         <option value="" hidden>Select Your Crop</option>
-                        <option value="1">Tomataoes</option>
-                        <option value="2">Basil</option>
-                        <option value="3">Lettuce</option>
-                        <option value="4">Carrots</option>
                         <option value="5">Asparagus</option>
+                        <option value="2">Basil</option>
                         <option value="6">Beans</option>
                         <option value="7">Beets</option>
                         <option value="8">Broccoli</option>
                         <option value="9">Brussels Sprouts</option>
+                        <option value="24">Bell Pepper</option>	
                         <option value="10">Cabbage</option>
+                        <option value="21">Cantaloupe</option>
+                        <option value="4">Carrots</option>
                         <option value="11">Cauliflower</option>
-                        <option value="12">Celery</option>
+                         <option value="12">Celery</option>
                         <option value="13">Chives</option>
+                        <option value="38">Cilantro</option>
                         <option value="14">Collard Greens</option>
                         <option value="15">Cucumbers</option>
-                        <option value="16">Sweet Corn</option>
-                        <option value="17">Eggplant</option>
-                        <option value="18">Onion</option>
-                        <option value="19">Garlic</option>
+                        <option value="45">Dill</option>
+                		<option value="17">Eggplant</option>
+                       	<option value="19">Garlic</option>
                         <option value="20">Kale</option>
-                        <option value="21">Cantaloupe</option>
-                        <option value="22">Parsnips</option>
+                        <option value="3">Lettuce</option>
+                        <option value="40">Mint</option>
+			            <option value="43">Okra</option>
+                    	<option value="18">Onion</option>
+			            <option value="36">Oregano</option>
+                        <option value="39">Parsley</option>
+                      	 <option value="22">Parsnips</option>
                         <option value="23">Peas</option>
-                        <option value="24">Bell Pepepr</option>
-                        <option value="25">Potatoes</option>
+			             <option value="25">Potatoes</option>
                         <option value="26">Pumpkin</option>
                         <option value="27">Radish</option>
                         <option value="28">Rhubarb</option>
-                        <option value="29">Spinach</option>
-                        <option value="30">Summer Squash</option>
+			            <option value="37">Rosemary</option>
+                        <option value="41">Sage</option>
+			            <option value="29">Spinach</option>
+            		    <option value="30">Summer Squash</option>
+                        <option value="16">Sweet Corn</option>
+ 			            <option value="44">Sweet Potato</option>
                         <option value="31">Swiss Chard</option>
+			            <option value="42">Tarragon</option>
+			            <option value="35">Thyme</option>
+		            	<option value="1">Tomataoes</option>
                         <option value="32">Turnip</option>
                         <option value="33">Watermelon</option>
                         <option value="34">Winter Squash</option>
-                        <option value="35">Thyme</option>
-                        <option value="36">Oregano</option>
-                        <option value="37">Rosemary</option>
-                        <option value="38">Cilantro</option>
-                        <option value="39">Parsley</option>
-                        <option value="40">Mint</option>
-                        <option value="41">Sage</option>
-                        <option value="42">Tarragon</option>
-                        <option value="43">Okra</option>
-                        <option value="44">Sweet Potato</option>
-                        <option value="45">Dill</option>
                     </select>
             <input style="color:white; border:none; font-size: 30x; background-color:#7895A4" type="submit" value="Show Crop"> 
     </style>
