--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,11 +113,19 @@
 }
 
 @media only screen and (max-width: 1024px) {
-    div.form iframe{
+    #popup{
+        position: relative; 
         width: 360px;
-        height: 440px;
+        height: 500px;
         overflow: hidden;
     }
+    #popupFrame iframe{
+        position: absolute; 
+        top:0; 
+        left: 0; 
+        width: 100%; 
+    }
+    
 }
 
 @media only screen and (max-width: 1024px) {
