--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -41,12 +41,11 @@
                     <button type="button" id="modalBtn" class="btn btn-light btn-lg float-md-right" >VolunteerForm</button>
                 </div>
 
-                <div class="form">
-                    <div id="popup" >
-                    <iframe id="popupFrame" src=""></iframe>
+                    <div id="popup" style="position:relative">
+                    <iframe id="popupFrame" src="" width="100%" height="100%"></iframe>
                   </div>
-                </div>
-            
+               
+                
                 <div class="container">
                     <div class="boxV">
                         <div class="left">
