mobile fix for info and contact

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -47,7 +47,7 @@
 
             <!-- Contact Form-->
             
-                <center><form action="/sendEmail" method="POST" meta name="viewport" content="width=device-width, initial-scale=3.0">
+                <center><form  style = " max-width:90%;" action="/sendEmail" method="POST" meta name="viewport" content="width=device-width, initial-scale=3.0">
                     <div class="form-group">
                         <b><label for="exampleFormControlInput">Name</label></b>
                         <input style= "background-color: antiquewhite;" name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
@@ -69,18 +69,18 @@
 
             <!--ABout me section-->
             <center><div class="column-2" <meta name="viewport" content="width=device-widscale=1">
-                <h1>Alan Titchmarsh</h1>
+                <h1>Alan</h1>    
+                <h1>Titchmarsh</h1>
 
                <img style=" max-width:70%; max-height: fit-content;"  src="../images/gardner.jpg" alt="Picture of Alan">
 
+               <p>
 
-                <p>Alan Titchmarsh left school with one O'Level in Art and became an apprentice gardener in Ilkley's Parks Department from 1964 to 1968, and a few years later was supervisor of staff training at the Royal Botanic Gardens.
 
-                Titchmarsh left in 1974 and became an assistant editor of gardening books at Hamlyn, before going on to be Deputy Editor of Amateur Gardening magazine.
+               </p>
 
-                From 1979 he became a freelance writer and broadcaster with significant contributions to amongst other publications: Woman's Own, The Daily Mail, the Daily and Sunday Express, Radio Times, Homes & Gardens, BBC Gardener's World Magazine and Gardenlife.
 
-                Alan Titchmarsh has written more than 40 gardening books, including the best-seller How to be a Gardener. He has also written novels such as Mr MacGregor, The Last Lighthouse Keeper, Only Dad, and Rosie.
+                <p style = "font-size: 20px;">Alan Titchmarsh left school with one O'Level in Art and became an apprentice gardener in Ilkley's Parks Department from 1964 to 1968, and a few years later was supervisor of staff training at the Royal Botanic Gardens. Titchmarsh left in 1974 and became an assistant editor of gardening books at Hamlyn, before going on to be Deputy Editor of Amateur Gardening magazine.From 1979 he became a freelance writer and broadcaster with significant contributions to amongst other publications: Woman's Own, The Daily Mail, the Daily and Sunday Express, Radio Times, Homes & Gardens, BBC Gardener's World Magazine and Gardenlife.Alan Titchmarsh has written more than 40 gardening books, including the best-seller How to be a Gardener. He has also written novels such as Mr MacGregor, The Last Lighthouse Keeper,Only Dad, and Rosie.</p>
 
 
                <p>     
