--- a/views/information.ejs
+++ b/views/information.ejs
@@ -100,7 +100,7 @@
     <!--Displayin Information-->
     <div class = "displayInfo">
         <h1 class="plantName"> <%=data.name %> </h1>
-        <img style="border:5px groove black;" class ="image" src="https://res-4.cloudinary.com/do6bw42am/image/upload/c_scale,f_auto,h_300/v1/<%=data.image_url%>" alt = "Image of Plant"></img>
+        <img style="border:5px groove black; max-width:350px;" class ="image" src="https://res-4.cloudinary.com/do6bw42am/image/upload/c_scale,f_auto,h_300/v1/<%=data.image_url%>" alt = "Image of Plant"></img>
         <p>                                                         
             <!--Space-->
         </p> 
