working on info

--- a/views/information.ejs
+++ b/views/information.ejs
@@ -104,7 +104,39 @@
         <p>                                                         
             <!--Space-->
         </p> 
-
+            <style type="text/css">
+            .tg  {border-collapse:collapse;border-color:#93a1a1;border-spacing:0;}
+            .tg td{background-color:#fdf6e3;border-color:#93a1a1;border-style:solid;border-width:1px;color:#002b36;
+            font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{background-color:#657b83;border-color:#93a1a1;border-style:solid;border-width:1px;color:#fdf6e3;
+            font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-lqe9{background-color:#657b83;text-align:center;vertical-align:top}
+            .tg .tg-baqh{text-align:center;vertical-align:top}
+            .tg .tg-0lax{text-align:left;vertical-align:top}
+            </style>
+            <table class="tg">
+            <thead>
+            <tr>
+                <th class="tg-baqh" colspan="2">About:</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="tg-0lax" colspan="2"> <%=data.description %> </td>
+            </tr>
+            <tr>
+                <td class="tg-lqe9">  <img style="width:10%; max-height: fit-content;"  src="../images/sun.png" alt=" sun">  </td>
+                <td class="tg-lqe9"> <img style="width:20%; max-height: fit-content;"  src="../images/soil.png" alt=" sun">
+                </td>
+            </tr>
+            <tr>
+                <td class="tg-0lax"> <%=data.optimal_sun %> </td>
+                <td class="tg-0lax"> <%=data.optimal_soil %>  </td>
+            </tr>
+            </tbody>
+            </table>
+            
+<!-- 
         <p class="plantDescription"> <b><%=data.description %> </b> </p>
         <p class = "os"> <b>Sun </b> : <%=data.optimal_sun %> </p>
         <p class = "soilo"> <b>Soil</b> : <%=data.optimal_soil %> </p>
@@ -114,6 +146,8 @@
         <p class = "water"> <b>Watering</b> : <%=data.watering %> </p>
         <p class = "feed"> <b>Feed</b> : <%=data.feeding %> </p>
         <p class = "Harvesting"> <b>Harvesting</b> : <%=data.harvesting %> </p>
+
+-->
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
