--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,11 +58,8 @@
                         <h5 style="text-align: center;">Right side plots:</h5>
                         <img src="images/FinalImageMobileRight.png"></img>
                     </div>
-                    <h6 id="pageDescription">Welcome! This is an interactive map of the communitity garden. When you hover over a plot it turns dark green. 
-                        <img src="images/FinalImageMobile.png" width="585px" height="630px"></img>
-                    </div>
-                    <h6 id="pageDescription">Hello! This is an interactive map of the communitity garden. When you hover over a plot it turns dark green. 
-                        Plots that are green are available. Plots in brown are already rented.</h6>
+                    <h5 id="pageDescription" style="text-align: center;">Welcome! This is an interactive map of the communitity garden. When you hover over a plot it turns dark green.  
+                        Plots that are green are available. Plots in brown are already rented. Click on the plot you would like to rent to fill out the registration form.</h5>
                     <div class="box">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg class="hidden-svg"
