--- a/views/information.ejs
+++ b/views/information.ejs
@@ -121,70 +121,64 @@
         <table class="tg">
         <thead>
         <tr>
-            <th class="tg-c3ow" colspan="2">About:</th>
+            <th class="tg-c3ow" colspan="2"> <center> About: </center> </th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td class="tg-0pky" colspan="2"> <%=data.description %> </td>
+            <td class="tg-0pky" colspan="2"> <center> <%=data.description %>
+            </center> </td>
         </tr>
         <tr>
             <td class="tg-cw6g">  <img style=" max-width:10%; max-height: fit-content;"  src="../images/sun.png" alt="sun"> </td>
             <td class="tg-cw6g">  <img style=" max-width:10%; max-height: fit-content;"  src="../images/soil.png" alt="soil"> </td>
         </tr>
         <tr>
-            <td class="tg-0pky"> <%=data.optimal_sun %> </td>
-            <td class="tg-0pky"> <%=data.optimal_soil %>  </td>
+            <td class="tg-0pky"> <center> <%=data.optimal_sun %> </center>  </td>
+            <td class="tg-0pky"> <center>  <%=data.optimal_soil %> </center>  </td>
         </tr>
         <tr>
            <td class="tg-urjj" colspan="2"> <center>  <img style=" max-width:5%; max-height: fit-content;"  src="../images/seedPlant.png" alt="seed to plant"> </center> </td> 
         </tr>
         <tr>
-            <td class="tg-0lax" colspan="2"> <%=data.growing_from_seed %> </td>
+            <td class="tg-0lax" colspan="2"> <center>  <%=data.growing_from_seed %> </center> </td>
         </tr>
         <tr>
-            <td class="tg-urjj" colspan="2">When to Plant:</td>
+            <td class="tg-urjj" colspan="2"> <center> When to Plant: </center> </td>
         </tr>
         <tr>
-            <td class="tg-0lax" colspan="2"> <%=data.when_to_plant %> </td>
+            <td class="tg-0lax" colspan="2"><center>  <%=data.when_to_plant %> </center> </td>
         </tr>
         <tr>
-            <td class="tg-urjj" colspan="2">Spacing: </td>
+            <td class="tg-urjj" colspan="2"> <center> Spacing: </center> </td>
         </tr>
         <tr>
-            <td class="tg-0lax" colspan="2">  <%=data.spacing %>  </td>
+            <td class="tg-0lax" colspan="2"> <center>  <%=data.spacing %> 
+            </center>  </td>
         </tr>
         <tr>
-            <td class="tg-moq0">Water:</td>
-            <td class="tg-y1d5">Feed:</td>
+            <td class="tg-moq0"> <center>  <img style=" max-width:5%; max-height: fit-content;"  src="../images/waterIcon.png" alt="Water"> </center> </td>
+            <td class="tg-y1d5"><center> <img style=" max-width:20%; max-height: fit-content;"  src="../images/feed.png" alt="Feed">  </center> </td>
         </tr>
         <tr>
-            <td class="tg-0lax"> <%=data.watering %> </td>
-            <td class="tg-0lax"> <%=data.feeding %> </td>
+            <td class="tg-0lax"> <center> <%=data.watering %> </center>  </td>
+            <td class="tg-0lax"> <center> <%=data.feeding %> </center>  </td>
         </tr>
         <tr>
-            <td class="tg-urjj" colspan="2">Harvesting:</td>
+            <td class="tg-urjj" colspan="2"> <center> Harvesting:</center> </td>
         </tr>
         <tr>
-            <td class="tg-0lax" colspan="2"> <%=data.harvesting %> </td>
+            <td class="tg-0lax" colspan="2"> <center> <%=data.harvesting %> 
+            </center> </td>
         </tr>
         </tbody>
         </table>
-            
-<!-- 
-        <p class="plantDescription"> <b><%=data.description %> </b> </p>
-        <p class = "os"> <b>Sun </b> : <%=data.optimal_sun %> </p>
-        <p class = "soilo"> <b>Soil</b> : <%=data.optimal_soil %> </p>
-        <p class = "seed"> <b>From the Seed</b> : <%=data.growing_from_seed %> </p>
-        <p class = "wtp"> <b>When to Plant</b> : <%=data.when_to_plant %> </p>
-        <p class = "space"> <b>Spacing</b> : <%=data.spacing %> </p>
-        <p class = "water"> <b>Watering</b> : <%=data.watering %> </p>
-        <p class = "feed"> <b>Feed</b> : <%=data.feeding %> </p>
-        <p class = "Harvesting"> <b>Harvesting</b> : <%=data.harvesting %> </p>
-
--->
     </div>
 
+    <p>
+
+        
+    </p>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
